--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -215,7 +215,7 @@ crossorigin=""/>
       <span lang="en">One idea, one type of perfume and one brief to guide creation</span>
     </h2>
     <p>
-      <span lang="fr">Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offre à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du <b>type de parfum</b> que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché :</span>
+      <span lang="fr">Lorsqu’une marque souhaite sortir un nouveau parfum, plusieurs choix s’offrent à elle. Il est ainsi très important de prendre en compte qu'il existe plusieurs types de processus de création, ces derniers étant principalement dépendants du <b>type de parfum</b> que le consommateur recherche. La liste suivante détaille les 5 types de parfums existant à ce jour sur le marché :</span>
       <span lang="en">When a brand wants to release a new fragrance, there are several choices. It is therefore very important to take into account that there are several types of creation process, which are mainly depending on the <b>type of perfume</b> that the consumer is looking for. The following list details the 5 types of perfume existing on the market today:</span>
     </p>
       <ul class="categorieparfum">
@@ -225,7 +225,7 @@ crossorigin=""/>
             <span lang="en">"<b>Mass distribution</b>" perfumes :</span>
           </h3>
           <p>
-            <span lang="fr">Ce sont des parfums respectant la <b>tendance</b>, vendu mondialement et en très grande quantité. Ces parfums se retrouvent dans les grandes enseignes de distribution spécialisées que nous connaissons tous. Appuyés par de grosses campagnes publicitaires, ces flacons sont généralement les plus portés et c'est la voie de distribution la plus courante. La concurrence y est très rude et les enjeux très important.</span>
+            <span lang="fr">Ce sont des parfums respectant la <b>tendance</b>, vendus mondialement et en très grande quantité. Ces parfums se retrouvent dans les grandes enseignes de distribution spécialisées que nous connaissons tous. Appuyés par de grosses campagnes publicitaires, ces flacons sont généralement les plus portés et c'est la voie de distribution la plus courante. La concurrence y est très rude et les enjeux très important.</span>
             <span lang="en">They are <b>trendy perfumes</b>, sold worldwide and in very large quantities. These fragrances can be found in the large specialized distribution chains that we all know. Supported by large advertising campaigns, these bottles are generally the most worn and it is the most common way of distribution. The competition is very tough and the stakes are very high.</span>
           </p>
         </li>
@@ -235,7 +235,7 @@ crossorigin=""/>
             <span lang="en">"<b>Mass market</b>" perfumes :</span>
           </h3>
           <p>
-            <span lang="fr">Ce sont des parfums crées dans des <b>volumes très importants</b>, possédant très peu, voir pas de marketing, un flacon standard, un packaging généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </span>
+            <span lang="fr">Ce sont des parfums créés dans des <b>volumes très importants</b>, possédant très peu, voir pas de marketing, un flacon standard, un packaging généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </span>
             <span lang="en">These are perfumes created in very large quantities, with very poor, if any marketing, a classical bottle and generally sober packaging. These products are generally found on the shelves of our supermarkets. Their prices are generally low, but quality is there.</span>
           </p>
         </li>
@@ -245,7 +245,7 @@ crossorigin=""/>
             <span lang="en">"<b>Niche</b>" or "<b>confidential</b>" perfumes :</span>
           </h3>
           <p>
-            <span lang="fr">Ces parfums sont généralement vendu en plus faible quantité, sont très peu soutenu par le marketing mais ils témoignent souvent d’une <b>volonté artistique</b> particulière. Le prix de ces flacons sont généralement supérieurs aux catégories précèdentes car les marques se positionnant ainsi sont généralement <b>indépendantes</b>, produissent peu de volume et se <b>concentre sur le contenu du flacon, pas sur le contenant ou le marketing.</b> C'est généralement dans cette catégorie que se situent les parfums les plus originaux. </span>
+            <span lang="fr">Ces parfums sont généralement vendus en plus faible quantité, sont très peu soutenus par le marketing mais ils témoignent souvent d’une <b>volonté artistique</b> particulière. Le prix de ces flacons sont généralement supérieurs aux catégories précèdentes car les marques se positionnant ainsi sont généralement <b>indépendantes</b>, produisent peu de volume et se <b>concentrent sur le contenu du flacon, pas sur le contenant ou le marketing.</b> C'est généralement dans cette catégorie que se situent les parfums les plus originaux. </span>
             <span lang="en">These fragrances are generally sold in smaller quantities, have very poor marketing support, but they often show a <b>particular artistic will</b>. The price of these bottles is generally higher than the previous categories because the brands positioning themselves in this way are generally <b>independent</b>, producing poor volumes and <b>focus on the content of the perfume, and not on the packaging or marketing</b>. It is generally in this category that the most original fragrances are found.</span>
           </p>
         </li>
@@ -255,7 +255,7 @@ crossorigin=""/>
             <span lang="en">"<b>Exclusive</b>" perfumes : </span>
           </h3>
           <p>
-            <span lang="fr">Ces parfums sont généralement crées par les sociétés qui commercialise des parfums dans la première catégorie listée. En parralèle des grandes productions, ces sociétés créent généralement une <b>gamme plus confidentielle</b>, se rapprochant du modèle de niche afin de toucher une clientèle différentes. Leur positionnement sont généralement très haut de gamme. </span>
+            <span lang="fr">Ces parfums sont généralement crées par les sociétés qui commercialisent des parfums dans la première catégorie listée. En parralèle des grandes productions, ces sociétés créent généralement une <b>gamme plus confidentielle</b>, se rapprochant du modèle de niche afin de toucher une clientèle différente. Leur positionnement est généralement très haut de gamme. </span>
             <span lang="en">These fragrances are generally created by companies that market fragrances in the first category listed. Alongside large productions, these companies generally create a <b>more confidential product range</b>, approaching the niche model in order to reach different clients. Their positioning is generally very high-end.</span>
           </p>  
         </li>
@@ -265,7 +265,7 @@ crossorigin=""/>
             <span lang="en">"<b>Customed</b>" perfumes : </span>
           </h3>
           <p>
-            <span lang="fr">Ces parfums sont généralement créés en un nombre extrèmement limité de produit. Ils sont créés <b>pour une seule personne ou pour une société</b> souhaitant se créer une identité olfactive. La création et les prix de vente de ces produits fluctuent énormément en fonction du nombre d'exemplaire, de la demande, du flacon etc.. et peuvent atteindre des sommes records.</span>
+            <span lang="fr">Ces parfums sont généralement créés en un nombre extrêmement limité de produits. Ils sont créés <b>pour une seule personne ou pour une société</b> souhaitant se créer une identité olfactive. La création et les prix de vente de ces produits fluctuent énormément en fonction du nombre d'exemplaires, de la demande, du flacon etc.. et peuvent atteindre des sommes records.</span>
             <span lang="en">These fragrances production is usually very limited. They are created <b>for a single person or for a company</b> wishing to create an olfactory identity for itself. Creation and prices can highly fluctuate, according to the number of copies produced, the demand, the bottle etc., and can reach very high amounts.</span>
         </li>
       </ul>  
@@ -273,7 +273,7 @@ crossorigin=""/>
       <img class="img2creationparfum" src="../img/evaluatrice.jpg" alt="Evaluation d'un parfum" title="Evaluation d'un parfum">
 
       <p class="mt-4">
-        <span lang="fr">Quel que soit l’objectif de la marque, l’idée du thème du parfum résulte d’une <b>étude de marché</b>. Cette étude peut être réalisée dans le but de cibler les notes olfactives, les plus tendance, celles qui n’ont encore jamais été senties, ou encore celles qui vont toucher une cible précise. <b class="bplus">L’idée résulte de l’interaction entre une marque et un consommateur.</b>
+        <span lang="fr">Quel que soit l’objectif de la marque, l’idée du thème du parfum résulte d’une <b>étude de marché</b>. Cette étude peut être réalisée dans le but de cibler les notes olfactives, les plus tendances, celles qui n’ont encore jamais été senties, ou encore celles qui vont toucher une cible précise. <b class="bplus">L’idée résulte de l’interaction entre une marque et un consommateur.</b>
         <br>
         Une fois l’idée formulée, elle est mise en forme dans un cahier des charges, aussi appelé « <b>brief</b> », dont l’objectif est d’énoncer clairement, ou de suggérer le thème du parfum. Le « brief » peut alors prendre plusieurs formes. Il peut être exprimé avec un ou plusieurs mots, images, musiques, vidéos, œuvres d’art, avec un degré de subjectivité voulu par le service marketing de la marque. <b class="bplus">C’est le « brief » qui va orienter et inspirer le parfumeur.</b></span>
 
@@ -319,7 +319,7 @@ crossorigin=""/>
           <span lang="en">The perfumer, the creator</span>
         </h2>
         <p>
-          <span lang="fr">Il n’existe pas de méthode de création type. Chaque parfumeur crée à sa manière. Certains travaillent autour de <b>matières premières naturelles</b>, en faisant <b>graviter</b> des matières premières synthétiques autour d’elles pour leur donner des <b>facettes précises</b> ; d’autres traduisent directement leur <b>interprétation du « brief » en matières premières</b>. Le choix des matières premières résulte d’une conviction intime du parfumeur, guidée par l’évaluateur. La création d’un parfum résulte alors d’échanges successifs. Le parfumeur entre sur un logiciel une formule utilisant plusieurs matières premières aux dilutions et proportions souhaitées. Lors de la formulation, une contrainte de <b class="bplus">réglementation</b> doit être respectée. Selon le type de produit dans lequel le parfum sera appliqué, les <b>allergènes</b> et les composés réglementés par l’<b>IFRA</b> ne doivent pas dépasser certains taux d’utilisation (voir notre <a href="../_/allergenes.html" target="_BLANK"> article sur les allergènes en parfumerie</a>).</span>
+          <span lang="fr">Il n’existe pas de méthode de création type. Chaque parfumeur crée à sa manière. Certains travaillent autour de <b>matières premières naturelles</b>, en faisant <b>graviter</b> des matières premières synthétiques autour d’elles pour leur donner des <b>facettes précises</b> ; d’autres traduisent directement leur <b>interprétation du « brief » en matières premières</b>. Le choix des matières premières résulte d’une conviction intime du parfumeur, guidée par l’évaluateur. La création d’un parfum résulte alors d’échanges successifs. Le parfumeur entre sur un logiciel une formule utilisant plusieurs matières premières aux dilutions et proportions souhaitées. Lors de la formulation, une contrainte de <b class="bplus">réglementation</b> doit être respectée. Selon le type de produits dans lequel le parfum sera appliqué, les <b>allergènes</b> et les composés réglementés par l’<b>IFRA</b> ne doivent pas dépasser certains taux d’utilisation (voir notre <a href="../_/allergenes.html" target="_BLANK"> article sur les allergènes en parfumerie</a>).</span>
 
           <span lang="en">There is no standard creation method. Each perfumer creates in his own way. Some work around <b>natural raw materials</b>, adding synthetic raw materials to give them <b>precise facets</b>; others translate their <b>interpretation of the "brief" directly into raw materials</b>. The choice of raw materials is the result of an intimate conviction on the part of the perfumer, guided by the evaluator. The creation of a perfume is then the result of successive exchanges. The perfumer enters on a software program a formula using several raw materials in the desired dilutions and proportions. During formulation, a <b class="bplus">regulatory</b> constraint must be respected. Depending on the type of product in which the perfume will be applied, the <b>allergens</b> and compounds regulated by the <b>IFRA</b> must not exceed certain amounts of use (see <a href="../_/allergenes.html" target="_BLANK">article about perfume allergens</a>).</span>
         </p>
@@ -402,8 +402,8 @@ crossorigin=""/>
 </ol>
 
 <p>
-    <span lang="fr">En somme, la création d’un parfum résulte de plusieurs étapes, et demande de nombreuses compétences, pour lesquelles le travail d’équipe est primordial. Tournant autour du consommateur, le parfum est au départ une idée, sublimée par la vision artistique d’un parfumeur, lui-même guidé par l’évaluateur, et aidé par l’assistant de parfumeur. La création d’un parfum est l’alliance d’une volonté marketing et artistique, tout en respectant les contraintes de stabilité, de réglementation, de coût et de temps imposées. L’art de la parfumerie réside donc dans la commercialisation d’une œuvre harmonieuse, contournant toute contrainte. Ainsi, le parfum est plus que jamais un produit de luxe, de raffinement et d’excellence.</span>
-    <span lang="en">In short, the creation of a perfume is the result of several stages, and requires many skills, for which teamwork is essential. Revolving around the consumer, the perfume is initially an idea, sublimated by the artistic vision of a perfumer, himself guided by the evaluator, and helped by the perfumer assistant. The creation of a perfume is the alliance of a marketing and artistic will, while respecting the constraints of stability, regulation, cost and time imposed. The art of perfumery therefore lies in the marketing of a harmonious work, bypassing all constraints. Thus, more than ever, perfume is a product of luxury, refinement and excellence.</span>
+    <span lang="fr">En somme, <b class="bplus">la création d’un parfum résulte de plusieurs étapes</b>, et demande de nombreuses compétences, pour lesquelles le <b>travail d’équipe</b> est primordial. Tournant autour du consommateur, le parfum est au départ une idée, sublimée par la vision artistique d’un parfumeur, lui-même guidé par l’évaluateur, et aidé par l’assistant de parfumeur. La création d’un parfum est l’alliance d’une volonté marketing et artistique, tout en respectant les contraintes de stabilité, de réglementation, de coût et de temps imposées. L’art de la parfumerie réside donc dans la commercialisation d’une œuvre harmonieuse, contournant toute contrainte. Ainsi, <b class="bplus">le parfum est plus que jamais un produit de luxe, de raffinement et d’excellence</b>.</span>
+    <span lang="en">In short, <b class="bplus">the creation of a perfume is the result of several stages</b>, and requires many skills, for which <b>teamwork is essential</b>. Revolving around the consumer, the perfume is initially an idea, sublimated by the artistic vision of a perfumer, himself guided by the evaluator, and helped by the perfumer assistant. The creation of a perfume is the alliance of a marketing and artistic will, while respecting the constraints of stability, regulation, cost and time imposed. The art of perfumery therefore lies in the marketing of a harmonious work, bypassing all constraints. <b class="bplus">Thus, more than ever, perfume is a product of luxury, refinement and excellence</b>.</span>
 </p>
 
 <hr>
