--- a/html/_/support.html
+++ b/html/_/support.html
@@ -1,34 +1,3 @@
-<!DOCTYPE html>
-<html class="h-100">
-<head>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-<!--ADD FAVICON -->
-<link rel="icon" type="image/png" href="../img/logotfav.png" />
-<!-- Titre de la page -->   
-<title lang="fr">ScenTree - Ils nous soutiennent - They Support us</title>
-<title lang="en">ScenTree - Ils nous soutiennent - They Support us</title>
-<!--Description Google-->
-<meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
-<!-- Bootstrap -->
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-<!-- Fichier Style CSS -->
-<link href="../css/stylesansmap.css" rel="stylesheet" />
-
-<link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-
-<!-- leaflet -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
-integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-crossorigin=""/>
-</head>
-
 <body class="d-flex flex-column h-100">
 <header class="d-md-none">
 <!-- fixed navbar -->
@@ -53,11 +22,11 @@ crossorigin=""/>
     </div>
     <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/support.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><span><i class="fas fa-info-circle notifi1"></i></span></a>
-    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/nouveautes.html"><span lang="fr">Les nouveautés  </span><span lang="en">News from us  </span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr">Les nouveautés  </span><span lang="en">News from us  </span><span><i class="fas fa-info-circle notifi2"></i></span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="/newsletter/newsletter/subscribe"><span lang="fr">Newsletter</span><span lang="en">Newsletter</span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
-    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/mentionslegales.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/legal.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
     <div class="dropdown-divider"></div>
     <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
     <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
@@ -67,228 +36,3 @@ crossorigin=""/>
 </div>
 </nav>
 </header>
-
-
-<!-- Class container corresponds à l'ensemble de la page-->
-<main role="main" class="flex-shrink-0 h-100">
-
-<div class="container-fluid h-100 PageEntiere">
-<div class="row h-100">
-
-<!-- Cette classe container est divisée en 2 partie, mapblock (partie de gauche) et rightblock (partie de droite avec le logo la recherche etc etc) -->
-
-<div id="menu-block" class="d-none d-md-flex  col-md-3 h-100 fillright">
-<div class="container-fluid">
-
-<div class="row align-items-start">
-  <div class="clearfix w-100">
-    <button class="btn to_english_button float-right" type="button"><img src="../img/anglais.png" alt="ScenTree in english" class="imgen">
-    </button>
-    <button class="btn text-in-color-brown float-right px-0">/</button>
-    <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
-  </div>
-  <div class="col-12 text-center">
-    <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="le logo de Scentree"></a>
-  </div>
-</div>
-
-<div class="row align-items-start text-center">
-  <!--Boutons support et news -->
-  <div class="col">
-    <a class="btn mt-4 text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
-    <br>
-    <a class="btn mt-4 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/support.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
-    <br>
-    <a class="btn mt-1 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
-  </div>    
-</div>
-
-<div class="row correctspacebug"></div>
-
-<div class="row h-15 align-items-end">
-  <div class="container-fluid text-center">
-  <div class="col-12 p-0 mt-5 mb-1">
-        <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
-          <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
-        </a>
-        <span class="col-12  m-0 p-0">
-          <a class="btn btn-sm save_map_status_on_leaving text-center" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">Enquête de satisfaction  </a>
-          <a class="btn btn-sm save_map_status_on_leaving text-center" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">Satisfaction survey  </a>
-        </span>
-        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
-          <span lang="fr">Sources</span><span lang="en">Sources</span>
-        </a>
-        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/contacts.html">
-        <span lang="fr">Contacts</span><span lang="en">Contacts</span>
-        </a>
-        <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/legal.html">
-         <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
-        </a>
-      <div class="col-12 mb-1 p-0 text-center">
-          <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-          <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-          <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
-      </div>
-    </div>
-   <div class="copyright row  d-none d-sm-none d-md-block">
-        <sup>©</sup> Copyright 2019-2020 |  ScenTree SAS  | All Rights Reserved |
-   </div>
-  </div>
-</div>
-
-</div>
-</div>
-
-
-<div id="mapblock" class="col-md-9 order-md-first p-0  h-100  fill2">
-
-
-<div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
-<div id="blanc1" class="row blockrgpd"></div>
-<div id="contenant" class="row">
-<div class=" col-offset-1 col-9 textRGPD" >
-  <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
-  <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
-</div> 
-<div class=" col-offset-2 col-3 boutonRGPD">
-  <button class="btn btn-success" id="cookie_please">
-    <span lang="fr">Accepter et continuer</span><span lang="en">Accept and continue</span>
-  </button><button class="btn btn-default btn-md NONRGPD" id="no_cookie">
-    <span lang="fr">Non</span><span lang="en">No</span>
-  </button>
-</div>
-</div>
-<div id="blanc1" class="row blockrgpd"></div>
-</div>
-<!--<div id="map" class="h-100-with-padding-60px-before-md"></div>-->
-
-<!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
-<div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown"><span lang="fr">LES SOUTIENS DU PROJET</span><span lang="en">SOURCES & REFERENCES</span></h1>
-</div>
-
-<hr>
-
-<div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
-
-<p class="mt-3">
-  <span lang="fr"> Le projet <i>ScenTree</i> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail. </span>
-  <span lang="en"> <i>ScenTree</i> was imagined and conceived by two MSc students of the ISIPCA, Maxime BAUD and Thomas ESPINASSE. Initially, the aim was to gather and harmonize our knowledge regarding raw materials. ScenTree quickly became what you see today. After two years of developing the software and the database, we are proud to show our work today. </span>
-</p>
-<p class="mt-3">
-  <span lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </span>
-  <span lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</span>
-</p>
-
-<div class="row">
-  <div class="col-12 col-xs-12">
-    <div class="row"> 
-      <div class="col-6 col-xs-12 entreprise">
-        <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b class="bplus"><i>Sociétés partenaires</i></b> </span>
-          <span lang="en"><b class="bplus"><i>Partner companies</i></b> </span>
-        </p>
-        <p class="col-12 col-xs-12 mt-3">
-           <a class="btn offset-1 col-4 col-xs-12 logosupporter" role="button" href="../supporters/cinquieme_sens.html"><img class="img-fluid logomenu boutonclickable min-height-80px max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></a>
-        </p>
-      </div>
-
-      <div class="col-6 col-xs-12 particulier">
-        <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b class="bplus"><i>Professionnels ayant participé à la base de données ScenTree</i></b> </span>
-          <span lang="en"><b class="bplus"><i>Professionals who participated to the ScenTree database :</i></b> </span>
-        </p>
-        <p>
-          <ul style="font-size: 0.8em;">
-            <li>ASTORRI Marc -<span lang="fr" class="profession"> (Ancien Apprenti Parfumeur)</span><span lang="en" class="profession"> (Former Perfumer Apprentice)</span></li>
-            <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
-            <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
-            <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
-            <li>DHORME Morgan -<span lang="fr" class="profession"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en" class="profession"> (Perfumer at Chidho Cosmétiques)</span></li>
-            <li>DURIEZ Jean-Michel -<span lang="fr" class="profession"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en" class="profession"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></li>
-            <li>FALIU Juliette -<span lang="fr" class="profession"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en" class="profession"> (Consultant and Writer at Le Nez Bavard)</span></li>
-            <li>FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
-            <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
-            <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
-            <li>LE FLEM Gabriel -<span lang="fr" class="profession"> (Chargé d'études)</span><span lang="en" class="profession"> (Study leaders)</span></li>
-            <li>LEMONNIER Aymeric -<span lang="fr" class="profession"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Perfumer intern at MAELSTROM Parfumeurs)</span></li>
-            <li>MORVAN Axel -<span lang="fr" class="profession"> (Parfumeur Analyste)</span><span lang="en" class="profession"> (Analyst Perfumer)</span></li>
-            <li>NORMAND Sophie -<span lang="fr" class="profession"> (Rédactrice - Formatrice Parfum)</span><span lang="en" class="profession"> (Writer - Perfume Trainer)</span></li>
-            <li>OROFINO Delphine -<span lang="fr" class="profession"> (Marketing de la Parfumerie et des Cosmétiques)</span><span lang="en" class="profession"> (Marketing of perfumes and cosmetics)</span></li>
-            <li>PROIA Stéphane -<span lang="fr" class="profession"> (Evaluateur Junior)</span><span lang="en" class="profession"> (Junior Evaluator)</span></li>
-            <li>RAYNAL Sabine - <span lang="fr" class="profession"> (Enseignante à l’ISIPCA)</span><span lang="en" class="profession"> (Teacher at ISIPCA)</span></li>
-            <li>REVILLARD Patrice - <span lang="fr" class="profession"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></li>
-            <li>TAMEN Jeremy -<span lang="fr" class="profession"> (Formateur expert dans les Fragrances du thé)</span><span lang="en" class="profession"> (Trainer - Tea fragrances expert)</span></li>
-            <li class="nouveausupporter">TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
-            <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
-          </ul>
-        </p>
-        <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b><i>Développement informatique</i></b> </span>
-          <span lang="en"><b><i>Informatics development</i></b> </span>
-        </p>
-          <ul style="font-size: 0.8em;">
-            <li>JACQUELINET Julien </li>
-            <li>BAUD Maxime</li>
-            <li>DE VIENNE Damien</li>
-          </ul>
-        <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b><i>Responsable mentions légales et juridiques</i></b> </span>
-          <span lang="en"><b><i>Legal and juridical mentions</i></b> </span>
-        </p>
-          <ul style="font-size: 0.8em;">
-            <li>VASKOU Marie</li>
-          </ul>
-        <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b><i>Graphismes, visuels et <a href="video.html">vidéo </a></i></b> </span>
-          <span lang="en"><b><i>Graphism, visuals and <a href="video.html">video </a></i></b> </span>
-        </p>
-          <ul style="font-size: 0.8em;">
-            <li>ERCOLANELLI Clara (Logo)</li>
-            <li>SHOGUN SHOOTER (Vidéo)</li>
-          </ul>
-      </div>
-    </div>
-  </div>  
-</div>
-</div>
-
-</div>
-</div>
-</div>
-</main>
-
-
-
-
-<!--############################################### -->
-<!--############## PARTIE JAVASCRIPT ############## --> 
-<!--############################################### -->
-
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-
-<script   src="https://code.jquery.com/jquery-3.4.1.min.js"   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="   crossorigin="anonymous"></script>
-<script   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="   crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-crossorigin=""></script>
-
-
-<script src="../js/main.js" type="text/javascript"></script>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-140166656-1"></script>
-<script>
-if (Cookies.get('RGPD_no_cookie') == -1) {
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-140166656-1');
-};
-</script>
-</body>
-</html>
-
