--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -56,7 +56,7 @@ crossorigin=""/>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr">Les nouveautés  </span><span lang="en">News from us  </span><span><i class="fas fa-info-circle notifi2"></i></span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="/newsletter/newsletter/subscribe"><span lang="fr">Newsletter</span><span lang="en">Newsletter</span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/contacts.html"><span lang="fr">Contacts</span><span lang="en">Contacts</span></a>
-    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
+    <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/Sources.html"><span lang="fr">Sources</span><span lang="en">Sources</span></a>
     <a class="dropdown-item btn  save_map_status_on_leaving" role="button" href="../_/legal.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
     <div class="dropdown-divider"></div>
     <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
@@ -166,7 +166,7 @@ crossorigin=""/>
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
   <h1 class="gros_titre text-in-color-brown">
-    <span lang="fr">NOS PARFUMS SONT-ILS DANGEREUX ?</span>
+    <span lang="fr">NOS PARFUMS SONT-ILS DE DANGEREUX ALLERGENES ?</span>
     <span lang="en">ARE OUR PERFUME DANGEROUS ?</span>
   </h1>
 </div>
@@ -176,14 +176,17 @@ crossorigin=""/>
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
   <h2 class="sous_titre mt-3">
-    <span lang="fr">Doit-on avoir peur des ingrédients de nos parfum ?<br>Les ingrédients allergènes présentent-ils un danger pour le consommateur ?</span>
+    <span lang="fr">
+      Doit-on avoir peur des extraits, molécules et ingrédients de nos parfums ? Provoquent-ils des allergies ?)
+      <br>Les ingrédients allergènes présentent-ils un danger pour le consommateur ?
+    </span>
     <span lang="en">Is there a reason to fear our perfume ingredients ? Are allergenic compounds dangerous for the costumer ?</span>
   </h2>
 
 
 
   <h2 class="sous_titre">
-    <span lang="fr">Introduction – Les molécules inscrites sur le packaging de nos produits cosmétiques</span>
+    <span lang="fr">Introduction – Les molécules inscrites sur le flacon de nos parfum</span>
     <span lang="en">Introduction – Molecules on our cosmetic products packaging</span>
   </h2>
   <p style="text-align: center;">
@@ -192,8 +195,9 @@ crossorigin=""/>
   </p>
    
   <p>
-    <span lang="fr"><i>Linalol, Limonène, Eugénol, Salicylate de Benzyl</i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’<b>allergènes</b> ». Comme souvent, <u>les ingrédients d’origine synthétique, et notamment les allergènes, font peur</u>. Certaines marques créent même des parfums « sans allergènes » afin d’attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d’ingrédients inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs. Or, nous allons voir ici que <u>certains de ces ingrédients ne sont pas nécessairement « dangereux »</u> et que <b class="bplus">leur impact est souvent dramatisé</b></span>
-    <span lang="en"><i>Linalool, Limonene, Eugenol, Benzyl Salicylate</i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>ingredients of synthetic origin, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these ingredients are not necessarily "dangerous"</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
+    <span lang="fr"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalol</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonène</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugénol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Salicylate de Benzyl</a></i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’<b>allergènes</b> ». Comme souvent, <u>les ingrédients d’origine synthétique, et notamment les allergènes, font peur</u>. Certaines marques créent même des parfums « sans allergènes » afin d’attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d’ingrédients inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs. Or, nous allons voir ici que <u>certains de ces ingrédients ne sont pas nécessairement « dangereux »</u> et que <b class="bplus">leur impact est souvent dramatisé</b></span>
+    
+    <span lang="en"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalool</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonene</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugenol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Benzyl Salicylate</a></i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>ingredients of synthetic origin, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these ingredients are not necessarily "dangerous"</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
   </p>
 
 
