--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -177,7 +177,7 @@ crossorigin=""/>
 
   <h2 class="sous_titre mt-3">
     <span lang="fr">
-      Doit-on avoir peur des extraits, molécules et ingrédients de nos parfums ? Provoquent-ils des allergies ?)
+      Doit-on avoir peur des extraits, molécules et ingrédients de nos parfums ? (Provoquent-ils des allergies ?)
       <br>Les ingrédients allergènes présentent-ils un danger pour le consommateur ?
     </span>
     <span lang="en">Is there a reason to fear our perfume ingredients ? Are allergenic compounds dangerous for the costumer ?</span>
@@ -195,8 +195,8 @@ crossorigin=""/>
   </p>
    
   <p>
-    <span lang="fr"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalol</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonène</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugénol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Salicylate de Benzyl</a></i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’<b>allergènes</b> ». Comme souvent, <u>les ingrédients d’origine synthétique, et notamment les allergènes, font peur</u>. Certaines marques créent même des parfums « sans allergènes » afin d’attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d’ingrédients inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs. Or, nous allons voir ici que <u>certains de ces ingrédients ne sont pas nécessairement « dangereux »</u> et que <b class="bplus">leur impact est souvent dramatisé</b></span>
-    
+    <span lang="fr"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalol</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonène</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugénol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Salicylate de Benzyl</a></i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le flacon de vos parfums. Elles sont partout ! Il s’agit de molécules qualifiées « d’<b>allergènes</b> ». Comme souvent, <u>les molécules "chimiques", et notamment les allergènes, font peur</u>. Certaines marques créent même des parfums « sans allergènes » afin d’attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant de molécules inconnues. Ces allégations sont surtout mises en place pour rassurer les consommateurs. Or, nous allons voir ici que <u>certaines de ces molécules ne provoquent pas nécessairement d'allergies</u> et que <b class="bplus">leur impact est souvent dramatisé</b></span>
+
     <span lang="en"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalool</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonene</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugenol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Benzyl Salicylate</a></i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>ingredients of synthetic origin, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these ingredients are not necessarily "dangerous"</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
   </p>
 
@@ -207,9 +207,9 @@ crossorigin=""/>
     </h2>
 
   <p>
-    <span lang="fr">Dans la composition de nos parfums portés et utilisés chaque jour, <b class="bplus">26 allergènes réputés peuvent exister</b>. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, <b class="bplus">lorsqu'elle sont présentes en quantités importantes</b>, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une réaction (cf. schéma ci-dessous) faisant intervenir notre système immunitaire et provoquant ainsi une réaction allergique. 
-    <br>A noter également que certaines substances réputées allergènes le sont <u>uniquement lorsqu'un facteur annexe s'installe et induit une transformation chimique</u>. C'est le cas notamment de certains ingrédients qui, au contact du soleil, peuvent s'oxyder et devenir de puissants allergènes. 
-    <br>Les réactions allergiques peuvent alors se manifester sous la forme de plaques rouges, de picotements etc. Le comité scientifique pour la sécurité des consommateurs a répertorié <b class="bplus">54 molécules et 28 extraits naturels pouvant provoquer une réaction allergique chez l’Homme</b>. Cette dernière liste n’est <u>pas exploitée dans le milieu de la parfumerie</u>.</span>
+    <span lang="fr">Dans la composition de nos parfums portés et utilisés chaque jour, <b class="bplus">26 allergènes réputés peuvent exister</b>. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, <b class="bplus">lorsqu'elle sont présentes en quantités importantes</b>, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une allergie (cf. schéma ci-dessous) faisant intervenir notre système immunitaire et provoquant ainsi une allergie. 
+    <br>A noter également que certains extraits et certaines molécules réputées allergènes le sont <u>uniquement lorsqu'un facteur annexe s'installe et induit une transformation chimique</u>. C'est le cas notamment de certains extraits et de certaines molécules qui, au contact du soleil, peuvent s'oxyder et devenir de puissants allergènes. 
+    <br>Les allergies peuvent alors se manifester sous la forme de plaques rouges, de picotements etc. Le comité scientifique pour la sécurité des consommateurs a répertorié <b class="bplus">54 molécules et 28 extraits naturels pouvant provoquer une allergie chez l’Homme</b>. Cette dernière liste n’est <u>pas exploitée dans le milieu de la parfumerie</u>.</span>
 
     <span lang="en">In the composition of our fragrances worn and used every day, <b class="bplus">26 known allergens may exist</b>. This list of 26 molecules and extracts is dictated by <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">Annex III of the European Cosmetic Regulation 1223/2009</a>. These are molecules which, <b class="bplus">when present in significant quantities</b>, may have the ability to bind to a protein present in our skin. This can lead to a reaction of our immune system and thus cause an allergic reaction.
     <br>It should also be noted that certain substances known to be allergenic are so <u>only when an additional factor sets in and induces a transformation of the molecule</u>. This is the case of certain ingredients that oxidise in light to become powerful allergens.
@@ -226,7 +226,7 @@ crossorigin=""/>
       <span lang="en">Who's allergic?</span>
   </h2>
   <p>
-    <span lang="fr"><b class="bplus">En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. </span>
+    <span lang="fr"><b class="bplus">En Europe, ces allergies concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être allergique à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. </span>
     <span lang="en"><b class="bplus">In Europe, these allergic reactions affect only 1 to 3% of the population.</b> This means that you have one to three chances in one hundred of being sensitive to at least one of the 26 substances listed by the cosmetic regulations.</span>
   </p>
 
@@ -237,7 +237,7 @@ crossorigin=""/>
 
   
   <p>
-    <span lang="fr">Alors, <b class="bplus">la réglementation cosmétique impose plusieurs mesures.</b> <u>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits parfumés du marché.</u> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
+    <span lang="fr">Alors, <b class="bplus">la réglementation cosmétique impose plusieurs mesures.</b> <u>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits contenant du parfum présents sur le marché.</u> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
     <span lang="en">So, <b class="bplus">cosmetic regulations impose several measures</b>. <u>These measures are taken so that every person, allergic or not, can consume the perfumed products on the market</u>. If you are not allergic to any of the substances, these measures are of no use to you.</span>
   </p>
 
@@ -245,7 +245,7 @@ crossorigin=""/>
       <img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" >
   </p>
   <p>
-    <span lang="fr">La première intervient lors de la création d’un parfum. Dans le cas où ce parfum entrera en contact avec la peau, il existe deux types de produits : </span>
+    <span lang="fr">La première intervient lors de la fabrication d’un parfum. Dans le cas où ce parfum entrera en contact avec la peau, il existe deux types de produits : </span>
     <span lang="en">The first one occurs during the creation of a perfume. In the event that this perfume gets in contact with the skin, there are two types of products :</span>
     <ul class="categorieparfum" style="font-size: 0.8em;">
       <li>
@@ -253,7 +253,7 @@ crossorigin=""/>
         <span lang="en">So-called « <b>rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
       </li> 
       <li>
-        <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arrêtant lorsque l'utilisateur du produit se lave et donc, rince le produit contenant les molécules. </span>
+        <span lang="fr">Les produits dits « <b>non-rincés</b> » (parfums alcooliques, crèmes…). Pour ces produits, le contact avec la peau entraine une exposition continue s'arrêtant lorsque l'utilisateur du produit contenant du parfum se lave et donc, rince les molécules allergènes. </span>
         <span lang="en">So-called « <b>not-rinced</b> » products (alcoholic perfumes, lotions…). Skin contact with these products is permanent and stops when the perfumes evaporates or when the consumer washes the concerned zone.</span>
       </li>
     </ul>
@@ -261,19 +261,19 @@ crossorigin=""/>
 
   <p>
     <span lang="fr"><b class="bplus">Dans les produits rincés</b>, la présence d’un allergène ne doit pas excéder <b class="bplus">100 ppm</b> (soit 0,01%) dans le produit fini. <b class="bplus">Dans les produits non-rincés</b>, cette présence ne doit pas excéder <b class="bplus">10 ppm</b> (0,001%).
-    <br>Par ailleurs, tout allergène présent à un taux supérieur à celui recommandé entraine sa mention sur le packaging du produit.</span>
+    <br>Par ailleurs, tout allergène présent à un taux supérieur à celui recommandé entraine sa mention sur le flacon du produit.</span>
     <span lang="en">In <b class="bplus">rinsed products</b>, the presence of an allergen must not exceed <b class="bplus">100 ppm</b> (i.e. 0.01%) in the finished product. In <b class="bplus">non-rinsed products</b>, the presence of an allergen shall not exceed <b class="bplus">10 ppm</b> (0.001%). 
     <br>In addition, any allergen used at a higher level than the recommended one must be mentioned on the product packaging.</span>
   </p>
 
 
   <h2 class="sous_titre">
-      <span lang="fr">Que risque-t-on ?</span>
+      <span lang="fr">Quel est le danger ?</span>
       <span lang="en">What do we risk ?</span>
   </h2>
 
   <p>
-    <span lang="fr">Par exemple, dans le cas où votre produit contient sur son packaging la mention de quatre molécules allergènes, sans savoir à quel(s) allergène(s) vous pourriez être allergique, cela signifie que vous avez tout au plus 0,5% de chance de contracter une allergie en utilisant ce produit. Faible, non ?</span>
+    <span lang="fr">Par exemple, dans le cas où votre produit contient sur son packaging la mention de quatre molécules ou extraits allergènes, sans savoir à quel(s) allergène(s) vous pourriez être allergique, cela signifie que vous avez tout au plus 0,5% de chance de contracter une allergie en utilisant ce produit. Faible, non ?</span>
     <span lang="en">For example, if your product contains four allergenic molecules on its packaging, without knowing to which allergen(s) you might be allergic, this means that you have at most a 0.5% chance of contracting an allergy when using this product. Low, isn't it?</span>
   </p>
 
