--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -12,7 +12,7 @@
 <title lang="fr">ScenTree - The allergens_Les allergènes</title>
 <title lang="en">ScenTree - The allergens_Les allergènes</title>
 <!--Description Google-->
-<meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+<meta name="description" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dangereuses ? .. Venez découvrir les secrets des ingrédients présents dans nos parfums. " />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
